# sml-mlx

./: .gitattributes  .gitignore  Makefile  README.md  check.py  fine_tune_lora_squad.py  hf_upload.py  hosts.json  hosts_alt_rank2first.json  hosts_single_mac1.json  hosts_tb_jaccl.json  hosts_tb_jaccl_alt_rank2first.json  hosts_tb_jaccl_rank2first.json  interact_lora.py  main.py  pipeline_generate.py  pull_all_hosts.py  pyproject.toml  requirements.txt  smoke.py  smolvlm_cam.py  tb.dot  tb_alt_rank2first.dot  tb_recheck2.dot  test_mlx_ring.py
chat/: chat_service.py  index.html
configs/: config_mlx_slm_beta_v1.json  config_mlx_slm_beta_v2_100m.json  config_mlx_slm_beta_v3_333m.json
data/scripts/: clean_code.py  download_stack.py  fetch_append_narrativeqa.py  fetch_csn_py.py  fetch_mixed_qa_jsonl.py  fetch_openbook_qa.py  fetch_openwebtext.py  fetch_squad_data.py  fetch_squad_v2.py  fetch_stack.py  fetch_stackexchange_code.py  fetch_tinystories.py  fetch_wikitext.py
fine_tune/: conversion.py  fine_tune_lora_mlx.py  lora.py  lora_config.yaml
model/: config.json  config_100m.json  data_mixer.py  eval.py  fine_tune.py  fine_tune_smolsmoltalk.py  finetune_eval.py  finetune_gooaq.py  finetune_tasks.py  inference.py  mlx-test.ipynb  model.py  oudated_config.json  train.py  utils.py
runs/sml-lm-100m/: meta.json  offset.txt
scripts/: encode_jsonl.py  eval_owt.py  eval_suite.py  mlx_dist_check.py
tokenizer/: fetch_fineweb.py  sp_tokenizer.py  spm.model  spm.vocab  train_tokenizer.py
tools/: inspect_ckpt.py
train/: config.json  model.py  train.py
(+8 files in other folders)
