[project]
name = "sml-mlx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.6.0",
    "huggingface-hub>=0.31.2",
    "mlx>=0.25.2",
    "mlx-lm>=0.24.1",
    "rich>=14.0.0",
    "tinygrad>=0.10.3",
    "wandb>=0.19.11",
]
