[project]
name = "sml-mlx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.6.0",
    "huggingface-hub>=0.24",
    "mlx>=0.28.0",
    "mlx-lm>=0.26.3",
    "mlx-metal>=0.28.0",
    "rich>=14.0.0",
    "sentencepiece>=0.2.0",
    "tinygrad>=0.10.3",
    "wandb>=0.19.11",
]
