[project]
name = "sml-mlx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=3.6.0",
    "huggingface-hub>=0.24",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.30.6",
    "rich>=14.0.0",
    "sentencepiece>=0.2.0",
    "tinygrad>=0.10.3",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.53.3",
    "wandb>=0.19.11",
    "mlx>=0.30.1",
    "mlx-lm>=0.29.1",
    "mlx-metal>=0.30.1",
]

[tool.uv.sources]
mlx-lm = { path = "mlx-lm", editable = true }
